# TFG

./: CMakeLists.txt  CudaInterop.h  GuiLayer.cpp  GuiLayer.h  NrcKernel.cu  NrcKernel.h  RenderKernel.cu  RenderKernel.h  boundingBox.h  bvh.cpp  bvh.cu  bvh.h  camara.h  cargarModelo.h  color.h  escenario.h  glad.c  gridsearch.h  imagen.h  imagen_gpu.h  imagen_utils.h  luzPuntual.h  main.cpp  main.cu  mlp.cpp  mlp.cu  mlp.h  mlp_types.h  plot_intensidad.py  primitiva.h  rayo.h  render.h  rng.h  tinybvh_wrapper.cpp  tinybvh_wrapper.h  transient.h  traverse_cwbvh.cuh  vector3d.h  visualizador.h
imgui_src/: imgui_impl_opengl3.cpp
include/KHR/: glad.h
modelos/concurso/: columna1.glb  columna2.glb  columna3.glb  esfera_rota.glb  suelo2.glb  suelo_grieta.glb
modelos/conejo/: scene.gltf
